--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Tay Dunworth's Design and Development Portfolio" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/lvv6uyv.css">
     <title>Tay Dunworth</title>
   </head>
   <body>
