Update of general branding and fix for showing projects/case studies

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://use.typekit.net/lvv6uyv.css">
-    <title>Tay Dunworth</title>
+    <title>tay dunworth | UI/UX Designer + Front-End Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
