Switches from Tay to Taylor throughout site

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Tay Dunworth's Design and Development Portfolio" />
+    <meta name="description" content="Taylor Dunworth's Design and Development Portfolio" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://use.typekit.net/lvv6uyv.css">
-    <title>tay dunworth | UI/UX Designer + Front-End Developer</title>
+    <title>Taylor Dunworth | UI/UX Designer + Front-End Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
